[package]
name = "item-validator"
version = "0.1.0"
authors = ["Chris Stevenson <cj.stevenson@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde =  { version = "1.0", features = ["derive"] }
# serde_yaml = "0.8"
yaml-rust = "0.4"
term = "0.6"
regex = "1"
lazy_static = "1"
