[package]
name = "item-entry"
version = "0.1.0"
authors = ["Chris Stevenson <cj.stevenson@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iced = "0.1.0-beta"
iced = {git = "https://github.com/hecrj/iced", branch = "master"}